Updated for Java 9 and Eclipse